--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,10 +3,9 @@
     "target": "ESNext",
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
-    "strict": true,
+    // "strict": true,
     "skipLibCheck": true,
     "outDir": "dist"
   },
-  "include": ["src/**/*"],
-  "exclude": ["src/**/*.d.ts"]
+  "include": ["src/**/*", "@types/**/*",]
 }
