--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,8 +3,8 @@
     "target": "ESNext",
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
-    // "strict": true,
-    "skipLibCheck": true,
+    "strict": true,
+    "skipLibCheck": false,
     "outDir": "dist"
   },
   "include": ["src/**/*", "@types/**/*",]
